@@ -46,7 +46,7 @@ WhatsNewDialog::WhatsNewDialog(OSystem& osystem, DialogContainer& parent,
           max_w, max_h);
 
   const string& version = instance().settings().getString("stella.version");
-#if defined(RETRON77)
+#ifdef RETRON77
   if(version < "6.5")
   {
     add(ypos, "increased sample size for CDFJ+");
@@ -57,10 +57,10 @@ WhatsNewDialog::WhatsNewDialog(OSystem& osystem, DialogContainer& parent,
     add(ypos, "improved memory usage in UI mode");
     add(ypos, "fixed broken Driving Controller support for Stelladaptor/2600-daptor devices");
     add(ypos, "fixed missing QuadTari option in UI");
+    add(ypos, "improved analog input reading");
+    add(ypos, "fixed QuadTari support for some controller types");
+    add(ypos, "fixed palette and TV effects saving");
   }
-  add(ypos, "improved analog input reading");
-  add(ypos, "fixed QuadTari support for some controller types");
-  add(ypos, "fixed palette and TV effects saving");
 #else
   if(version < "6.5")
   {
@@ -75,11 +75,14 @@ WhatsNewDialog::WhatsNewDialog(OSystem& osystem, DialogContainer& parent,
     add(ypos, "fixed paddle button bug for jittering controllers");
     add(ypos, "fixed broken Driving Controller support for Stelladaptor/2600-daptor devices");
     add(ypos, "fixed missing QuadTari option in UI");
+    add(ypos, "added context-sensitive help");
+    add(ypos, "improved analog input reading");
+    add(ypos, "improved multi-monitor support");
+    add(ypos, "fixed QuadTari support for some controller types");
   }
-  add(ypos, "added context-sensitive help");
-  add(ypos, "improved analog input reading");
-  add(ypos, "improved multi-monitor support");
-  add(ypos, "fixed QuadTari support for some controller types");
+  add(ypos, "added weblinks for many games");
+  add(ypos, "debugger: added optional logging of breaks and traps");
+  add(ypos, "debugger: enhanced prompt auto complete and history");
   add(ypos, ELLIPSIS + " (for a complete list see 'docs/Changes.txt')");
 #endif
 
